--- a/css/style.css
+++ b/css/style.css
@@ -283,6 +283,14 @@ body {
 }
 
 @media (min-width: 600px) {
+  header {
+    font-size: 22px;
+  }
+
+  header h1 {
+    font-size: 55px;
+  }
+
   .features {
     padding-top: 5%;
     padding-bottom: 3%;
